# Timer-Event-Generator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Timer  cmake_install.cmake
inc/: ITimer.hpp  Timer.hpp
src/: Timer.cpp  main.cpp
